--- a/regress_fbgm.ipynb
+++ b/regress_fbgm.ipynb
@@ -47,6 +47,124 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#orig_df = df.copy()\n",
+    "#df = orig_df.sample(frac=0.1)\n",
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats_to_pred = (df.columns[105:])\n",
+    "stats_to_use = list(df.columns[11:103])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "need_norm = ['Cmp', 'Att', 'Yds', 'TD', 'Int', 'Sk', 'Yds.1','Rush', 'Yds.2', 'TD.1','Tgt', 'Rec', 'Yds.3', 'TD.2', 'Tch','RRTD',\n",
+    " 'Int.1',\n",
+    " 'Yds.4',\n",
+    " 'TD.3',\n",
+    " 'PD',\n",
+    " 'FF',\n",
+    " 'FR',\n",
+    " 'Yds.5',\n",
+    " 'TD.4',\n",
+    " 'Sk.1',\n",
+    " 'Tck',\n",
+    " 'Solo',\n",
+    " 'Ast',\n",
+    " 'TFL',\n",
+    " 'Sfty',\n",
+    " 'Fmb',\n",
+    " 'FG10',\n",
+    " 'FGA10',\n",
+    " 'FG20',\n",
+    " 'FGA20',\n",
+    " 'FG30',\n",
+    " 'FGA30',\n",
+    " 'FG40',\n",
+    " 'FGA40',\n",
+    " 'FG50',\n",
+    " 'FGA50',\n",
+    " 'FGM',\n",
+    " 'FGA',\n",
+    " 'XPM',\n",
+    " 'XPA',\n",
+    " 'Pnt',\n",
+    " 'Yds.7',\n",
+    " 'PR',\n",
+    " 'Yds.8',\n",
+    " 'TD.5',\n",
+    " 'KR',\n",
+    " 'Yds.9',\n",
+    " 'TD.6',\n",
+    " 'FL',\n",
+    " 'Pen',\n",
+    " 'Yds.6',\n",
+    " 'Blk',\n",
+    "'YScm',\n",
+    " 'APY',\n",
+    " 'AV']\n",
+    "need_norm = list(set(need_norm))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BAD_SET = set(['Blk','FL', 'Pen', 'Yds.6','Lng.4', 'APY'])\n",
+    "need_norm = [_ for _ in need_norm if _ not in BAD_SET]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for col in need_norm:\n",
+    "    df[col + '_PerG'] = df[col]/np.maximum(df['G'],1)\n",
+    "    stats_to_use.append(col + '_PerG')\n",
+    "for col in need_norm:\n",
+    "    del stats_to_use[stats_to_use.index(col)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats_to_use = [_ for _  in stats_to_use if _ not in BAD_SET]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pos_t = 'QB'\n",
+    "stat_t = 'ThP'\n",
+    "stat_t_idx = list(y.columns).index(stat_t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "replacement_player_mean_bs = {}\n",
     "replacement_player_std_bs = {}\n",
     "replacement_player_cov_bs = {}\n",
@@ -59,12 +177,13 @@
     "scalersY = {}\n",
     "fexps = {}\n",
     "for pos in unique_pos:\n",
-    "    y = df[df.Pos == pos].iloc[:,105:]\n",
-    "    X = df[df.Pos == pos].iloc[:,11:103]\n",
+    "    y = df[df.Pos == pos]#.iloc[:,105:]\n",
+    "    X = df[df.Pos == pos]#.iloc[:,11:103]\n",
+    "    y = y[stats_to_pred]\n",
     "    \n",
-    "    valid_col = [_ for _ in X.columns if not _ in ['Blk','FL', 'Pen', 'Yds.6','Lng.4', 'APY']]\n",
+    "    valid_col = stats_to_use#[_ for _ in X.columns if not _ in ['Blk','FL', 'Pen', 'Yds.6','Lng.4', 'APY']]\n",
     "    X = X[valid_col]\n",
-    "    replacement_filter = (df.Pos == pos) & (df.Salary >= 0.25) & (df.Salary < 1.0)\n",
+    "    replacement_filter = (df.Pos == pos) & (df.Salary >= 0.10) & (df.Salary < 1.0)\n",
     "    replacement_player_mean_bs[pos] = X[replacement_filter].mean()\n",
     "    replacement_player_std_bs[pos] = X[replacement_filter].std()\n",
     "    replacement_player_cov_bs[pos] = X[replacement_filter].cov()\n",
@@ -73,7 +192,7 @@
     "    replacement_player_std_r[pos] = y[replacement_filter].std()\n",
     "    replacement_player_cov_r[pos] = y[replacement_filter].cov()\n",
     "    \n",
-    "    fexp = preprocessing.PolynomialFeatures(degree=1,interaction_only=False)\n",
+    "    fexp = preprocessing.PolynomialFeatures(degree=1,interaction_only=True)\n",
     "    scalerX = preprocessing.StandardScaler()\n",
     "    scalery = preprocessing.StandardScaler()\n",
     "    prescale_X = scalerX.fit_transform(X)\n",
@@ -81,14 +200,21 @@
     "    prescale_X = fexp.fit_transform(prescale_X)\n",
     "    X_train, X_test, y_train, y_test = model_selection.train_test_split(prescale_X, prescale_y, test_size=0.25, random_state=42)\n",
     "    \n",
-    "    clf = multioutput.MultiOutputRegressor(linear_model.ElasticNet(alpha=5e-3))\n",
+    "    clf = multioutput.MultiOutputRegressor(linear_model.ElasticNet(alpha=5e-2))\n",
     "    clf.fit(prescale_X,prescale_y)\n",
     "    yt = scalery.inverse_transform(clf.predict(prescale_X))\n",
     "    print(pos,clf.score(prescale_X,prescale_y))\n",
     "    clfs[pos] = clf\n",
     "    scalersX[pos] = scalersX\n",
     "    scalersY[pos] = scalery\n",
-    "    fexps[pos] = fexp"
+    "    fexps[pos] = fexp\n",
+    "    \n",
+    "    if pos == pos_t:\n",
+    "        fscores = sklearn.feature_selection.f_regression(prescale_X,prescale_y[:,stat_t_idx])[1]\n",
+    "        for i in np.argsort(fscores):\n",
+    "            if np.isnan(fscores[i]) or fscores[i] > 0.1:\n",
+    "                continue\n",
+    "            print(X.columns[i],fscores[i])"
    ]
   },
   {
@@ -119,8 +245,9 @@
     "col_names = X.columns\n",
     "col_names = fexp.get_feature_names(X.columns)\n",
     "\n",
-    "pos = 'WR'\n",
-    "\n",
+    "pos = 'QB'\n",
+    "stat_t = 'ThV'\n",
+    "stat_t_idx = list(y.columns).index(stat_t)\n",
     "for i,c in enumerate(y.columns):\n",
     "    coeffs = clfs[pos].estimators_[i].coef_ \n",
     "    v = np.argsort(abs(coeffs))[::-1]\n",
@@ -133,7 +260,8 @@
     "    for v,n in sorted(coeffs2,reverse=True):\n",
     "        print('|{:25s}|{:.5f}|'.format(n,v))\n",
     "    #for v,n in sorted(coeffs2,reverse=True):\n",
-    "    #    print('\\t{:25s}\\t{:.2f}'.format(n,v))\n"
+    "    #    print('\\t{:25s}\\t{:.2f}'.format(n,v))\n",
+    "\n"
    ]
   },
   {
@@ -142,7 +270,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GEN_YEAR = 2007\n",
+    "GEN_YEAR = 2019\n",
     "tyear = [GEN_YEAR]\n",
     "#if tyear[0] < 1980:\n",
     "#    print(\"MY PARSING OF THE TABLES IS WRONG WITHOUT the 2PA/3PA TRACKS\")\n",
@@ -154,6 +282,15 @@
     "    all_tables[ty] = np.load('fb_tables_{}.pkl'.format(ty))\n",
     "teams = all_tables[tyear[0]].keys()\n",
     "print(all_tables[GEN_YEAR]['nwe'].keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sklearn.feature_selection"
    ]
   },
   {
@@ -475,11 +612,19 @@
     "                    d['Pos'].append(stats[t][0][table_columns[(ty,team)][t].index('Pos')])\n",
     "                except:\n",
     "                    pass\n",
+    "                try:\n",
+    "                    d['G'] = max(int(stats[t][0][table_columns[(ty,team)][t].index('G')]),d.get('G',0))\n",
+    "                    #print(d['G'])\n",
+    "                except:\n",
+    "                    pass\n",
     "            if 'games_played_team' not in stats:\n",
     "                continue\n",
     "            wt = stats['games_played_team'][0][4]\n",
     "            ht = stats['games_played_team'][0][5]\n",
     "            exp = stats['games_played_team'][0][8]\n",
+    "            for col in need_norm:\n",
+    "                if col in d:\n",
+    "                    d[col + '_PerG'] = d[col]/np.maximum(d.get('G',0),1)\n",
     "            player_vectors.append([d[stat] for stat in X.columns])\n",
     "            player_names.append(name)\n",
     "            player_years.append(ty)\n",
@@ -506,6 +651,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "player_stats[ty][name]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "first_n = len([yr for yr in player_years if yr == tyear[0]])\n",
     "gen_FA = 0#len(teams)*5 if CURRENT_YEAR!=GEN_YEAR else 0\n",
     "first_n,len(teams),gen_FA\n",
@@ -519,7 +673,8 @@
    "outputs": [],
    "source": [
     "Xn = np.nan_to_num(np.array(player_vectors))\n",
-    "#Xn.shape,Xn_s.shape,prescale_X.shape,fexp.n_input_features_,X.shape\n"
+    "#Xn.shape,Xn_s.shape,prescale_X.shape,fexp.n_input_features_,X.shape\n",
+    "#clf2 = None"
    ]
   },
   {
@@ -533,8 +688,8 @@
     "    scalerX_pos_og = preprocessing.StandardScaler()\n",
     "\n",
     "    fexp_pos = preprocessing.PolynomialFeatures(degree=1,interaction_only=False)\n",
-    "    tmpX = df.iloc[:,11:103]\n",
-    "    tmpX = tmpX[valid_col]\n",
+    "    #tmpX = df.iloc[:,11:103]\n",
+    "    tmpX = df[valid_col]\n",
     "\n",
     "    clf2.fit(fexp_pos.fit_transform(scalerX_pos_og.fit_transform(tmpX)),df.Pos)\n",
     "\n",
@@ -706,7 +861,7 @@
     "import random\n",
     "base = {}\n",
     "\n",
-    "base['startingSeason'] = tyear[0]\n",
+    "base['startingSeason'] = GEN_YEAR\n",
     "valid_tids = list(range(len(teams)))\n",
     "\n",
     "new_teams = []\n",
