--- a/merge_roster.ipynb
+++ b/merge_roster.ipynb
@@ -84,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('updated_roster_playoff.json','wt') as fp:\n",
+    "with open('updated_roster.json','wt') as fp:\n",
     "    json.dump(base,fp)"
    ]
   },
