--- a/correct_base.ipynb
+++ b/correct_base.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "players,base = load_roster('2019-20.NBA.Roster.json')\n",
+    "players,base = load_roster('alexnoob.json')\n",
     "abbrev_to_tid = {_['abbrev']:_['tid']for _ in base['teams']}\n",
     "abbrev_to_tid['PHO'] = abbrev_to_tid['PHX']\n",
     "abbrev_to_tid['CHO'] = abbrev_to_tid['CHA']\n",
@@ -75,7 +75,7 @@
    "source": [
     "current_ratings =  [_['ratings'][0] for _ in players_discard]\n",
     "for cr,p in zip(current_ratings,players_discard):\n",
-    "    cr['age'] = 2019 - p['born']['year']\n",
+    "    cr['age'] = base['startingSeason'] - p['born']['year']\n",
     "current_ratings = pd.DataFrame(current_ratings)\n",
     "if 'ovr' in current_ratings.columns:\n",
     "    current_ratings = current_ratings.drop(['ovr'],1)\n"
@@ -87,12 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "old_players = []\n",
-    "for file in sorted(os.listdir('roster_samples')):\n",
-    "    if fnmatch.fnmatch(file, '*.json'):\n",
-    "        print(file)\n",
-    "        players2,_ = load_roster(os.path.join('roster_samples',file))\n",
-    "        old_players += players2"
+    "old_ratings = pd.read_csv('big_stat.csv')"
    ]
   },
   {
@@ -101,12 +96,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "players2_discard = [_ for _ in old_players if  _['tid'] > -3 ]\n",
-    "old_ratings =  [_['ratings'][0] for _ in players2_discard]\n",
-    "for cr,p in zip(old_ratings,players2_discard):\n",
-    "    cr['age'] = 2044 - p['born']['year'] \n",
-    "old_ratings = pd.DataFrame(old_ratings)\n",
-    "old_ratings = old_ratings.drop(['ovr'],1)"
+    "old_ratings.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for col in old_ratings.columns:\n",
+    "    old_ratings[col.lower()] = old_ratings[col]\n",
+    "old_ratings['endu'] = old_ratings['end']\n",
+    "old_ratings['stre'] = old_ratings['str']\n",
+    "old_ratings['tp'] = old_ratings['3pt']\n",
+    "old_ratings['fg'] = old_ratings['2pt']\n",
+    "old_ratings['ft'] = old_ratings['ft.1']\n",
+    "\n",
+    "\n",
+    "#old"
    ]
   },
   {
@@ -155,7 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if True:\n",
+    "if False:\n",
     "    std_multi = 1.2\n",
     "    mean_multi = 0.9\n",
     "    for key in stats_correct:\n",
@@ -192,7 +200,7 @@
     "players_discard = [_ for _ in base['players'] if  _['tid'] > -3 ]\n",
     "current_ratings2 =  [_['ratings'][0] for _ in players_discard]\n",
     "for cr,p in zip(current_ratings2,players_discard):\n",
-    "    cr['age'] = 2019 - p['born']['year']\n",
+    "    cr['age'] = base['startingSeason'] - p['born']['year']\n",
     "current_ratings2 = pd.DataFrame(current_ratings2)\n",
     "if 'ovr' in current_ratings2.columns:\n",
     "    current_ratings2 = current_ratings2.drop(['ovr'],1)\n",
@@ -246,6 +254,13 @@
    "source": [
     "[_ for _ in base['players'] if _['firstName'] == 'Zion']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
