fix version issue

--- a/correct_base.ipynb
+++ b/correct_base.ipynb
@@ -38,7 +38,8 @@
     "            base['players'][i]['lastName'] = ' '.join(sname[1:])\n",
     "            del base['players'][i]['name']\n",
     "    players = base['players']\n",
-    "    base['version'] = 32\n",
+    "    print(base['version'])\n",
+    "    base['version'] = 33\n",
     "\n",
     "    return players,base"
    ]
@@ -243,7 +244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[_ for _ in base['players'] if _['firstName'] == 'Zion']"
+    "[_ for _ in base['players'] if _['firstName'] == 'LeBron']"
    ]
   },
   {
@@ -252,8 +253,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[_ for _ in base['players'] if _['firstName'] == 'Zion']"
+    "[_ for _ in base['players'] if _['firstName'] == 'LeBron']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
