added test roster

--- a/correct_base.ipynb
+++ b/correct_base.ipynb
@@ -50,7 +50,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "players,base = load_roster('alexnoob.json')\n",
+    "players,base = load_roster('2019-20.NBA.Roster.json')\n",
+    "base['startingSeason'] = 2020\n",
     "abbrev_to_tid = {_['abbrev']:_['tid']for _ in base['teams']}\n",
     "abbrev_to_tid['PHO'] = abbrev_to_tid['PHX']\n",
     "abbrev_to_tid['CHO'] = abbrev_to_tid['CHA']\n",
@@ -261,7 +262,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "(old_ratings.ovr <= 34).sum() / old_ratings.shape[0]"
+   ]
   },
   {
    "cell_type": "code",
