--- a/regress_WAR.ipynb
+++ b/regress_WAR.ipynb
@@ -26,7 +26,12 @@
    "source": [
     "df = pd.read_csv('big_stat.csv')#pd.read_csv('BBGM_League_7_all_seasons_Average_Stats.csv')\n",
     "df = df[(df.G*df.MP > 82)]\n",
-    "df.shape\n"
+    "time_weight = (1/np.array(df['MP']))\n",
+    "#df['DRE'] = (df['PTS'] + .2*df['TRB'] + 1.7*df['STL'] + .535*df['Blk'] + .5*df['AST'] - .9*df['FGA'] -.35*df['FTA'] - 1.4*df['TOV'])*time_weight*36\n",
+    "df['DRE'] = (-0.552*df['3PA']-0.719*(df['FGA']-df['3PA'])+0.79231*df['PTS'] + 0.1348*df['ORB'] +0.4*df['DRB'] + 1.68*df['STL'] + 0.7639*df['Blk'] + 0.544*df['AST'] - .16*df['FTA'] - 1.36*df['TOV'] -0.1084*df['PF'])*time_weight*48-8.4236\n",
+    "df.shape\n",
+    "_ = plt.hist(df.DRE,100)\n",
+    "plt.title('{}'.format(df.DRE.mean()))"
    ]
   },
   {
@@ -154,14 +159,14 @@
     "new_ovr = []\n",
     "nc = np.array([5,1,4,2,1,1,2,1,1,3,7,3,3,3,1])\n",
     "\n",
-    "new_ovr = np.array(df.iloc[:,-15:]) @ (nc/nc.sum())\n",
+    "new_ovr = np.array(df.iloc[:,-16:-1]) @ (nc/nc.sum())\n",
     "#for row in df.iterrows():\n",
     "#    new_ovr.append(sum([row[1][k]*v for k,v in zip(dkeys,nc)])/nc.sum())\n",
     "#    break\n",
     "\n",
     "plt.hist(new_ovr,100)\n",
     "print(np.array(new_ovr).mean())\n",
-    "df.columns[-15:]"
+    "df.columns[-16:-1]"
    ]
   },
   {
@@ -181,13 +186,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = df.iloc[:,-18:-17] #45\n",
+    "y = df['+/-'] * time_weight * 36#45\n",
     "#y.iloc[:,0] += (df.iloc[:,45]-0.074737)*50 #45\n",
     "#y /=2 \n",
     "\n",
-    "X = df.iloc[:,-15:] # -17:-16\n",
+    "X = df.iloc[:,-16:-1] # -17:-16\n",
     "#X = X[[_ for _ in X.columns if _ != '+/-' ]]\n",
-    "X.columns,y.columns,y.shape"
+    "#X.columns,y.columns,y.shape"
    ]
   },
   {
@@ -196,7 +201,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_ = plt.hist(y.iloc[:,0],20)"
+    "_ = plt.hist(y,20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y=pd.DataFrame(y)"
    ]
   },
   {
@@ -258,6 +272,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "if False:\n",
+    "    import statsmodels.api as sm\n",
+    "    clf_sm = sm.RLM(np.array(y['+/-']),prescale_X.astype(np.float),weights=W)\n",
+    "    res = clf_sm.fit()\n",
+    "    yt = scalery.inverse_transform(res.predict(prescale_X))\n",
+    "    err = np.linalg.norm(yt-y['+/-'])\n",
+    "    print(err)\n",
+    "    res.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "ts = sorted(ts)[::1] # why not the biggest error\n",
     "print(ts[0][0])\n",
     "clf = ts[0][1]"
@@ -269,7 +299,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "round(df.iloc[:,-15:].mean()),round(df.iloc[:,-15:].std())"
+    "round(df.iloc[:,-16:-1].mean()),round(df.iloc[:,-16:-1].std())"
    ]
   },
   {
@@ -327,7 +357,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "res.params"
+   ]
   },
   {
    "cell_type": "code",
@@ -335,7 +367,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "coeff = clf.estimators_[i].coef_ \n",
+    "coeff = np.array(res.params)#clf.estimators_[i].coef_ \n",
     "coeff = np.round(coeff,2)\n",
     "coeff[np.where(coeff <= 0)] = 0.01\n",
     "\n",
@@ -471,6 +503,422 @@
     "plt.plot([30,75],[30,75],c='k')\n",
     "plt.grid(True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['GmBPM2'] = (-0.55*df['FGA'] + 2.43*df['3P']+ 1.39*(df['FGA']-df['3P']) + 0.79*df['FT'] -0.25*df['FTA'] \\\n",
+    "                + 0.17*df['ORB'] - 0.27*df['DRB'] + 0.43*df['AST'] + 1.34*df['STL'] + 0.64*df['Blk']-0.95*df['TOV']-0.34*df['PF'])*time_weight*48"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_ = plt.hist(df['GmBPM2'],100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf_bpm = linear_model.ElasticNetCV(cv=10,fit_intercept=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf_bpm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['+/-_min'] = df['+/-'] * time_weight * 48"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Xbpm = df.iloc[:,10:58]\n",
+    "Xbpm['2PA'] = Xbpm['FGA']-Xbpm['3PA']\n",
+    "Xbpm['2P'] = Xbpm['FG']-Xbpm['3P']\n",
+    "\n",
+    "Ybpm = df['+/-_min']\n",
+    "#Xbpm = Xbpm[[_ for _ in Xbpm.columns if _ not in ['DRtg','ORtg','FG','LowPostFGA','AtRimFGA','TOV%', 'FG%','EWA', 'MidRangeFGP', '3PAr', 'AtRimFGP', 'LowPostFGP', '3P%', 'FT%', 'ORB%', 'FTr','WS','OWS','DWS','WS/48','PER', 'USG%', 'TRB%', 'TRB', 'TOV', 'STL', 'PF', 'ORB', 'MidRangeFGA', 'MidRangeFG', 'MP', 'LowPostFG', 'FT', 'DRB', 'Blk', 'BA', 'AtRimFG', '3PA', '3P',]]]\n",
+    "#Xbpm = Xbpm[[_ for _ in Xbpm.columns if _ not in ['DRtg','ORtg','PER','DWS','OWS','WS','WS/48','EWA', 'MidRangeFGA', 'MidRangeFG', 'AtRimFG','AtRimFGA','LowPostFGA', 'MP', '3PAr', 'LowPostFG', 'LowPostFGP', 'AtRimFGP', 'FTr', 'MidRangeFGP','FT%','TRB']]]\n",
+    "#Xbpm = Xbpm[[_ for _ in Xbpm.columns if _ not in  ['TRB%','ORB%','DRB%','TS%', 'FG', 'BLK%', 'BA', 'FGA', 'FG%', 'Blk', '3P', '3P%', 'FTA', 'FT', 'PF']]]\n",
+    "Xbpm = Xbpm[[_ for _ in Xbpm.columns if _ not in  ['DRtg','ORtg','2PA','2P','PF','Blk','3PA','3P%','FT','TS%','TRB','USG%','STL%','AST%','TRB%','ORB%','DRB%','BLK%', 'FG%','LowPostFGA','AtRimFGA','TOV%', '3P','FTr','FG%','EWA', 'MidRangeFGP', '3PAr', 'AtRimFGP', 'LowPostFGP', 'AtRimFG','MP', 'FT%', 'ORB%','WS','OWS','DWS','WS/48','PER', 'USG%', 'TRB%','LowPostFG','MidRangeFG','MidRangeFGA']]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for col in ['FGA','FTA','AST','PTS','TRB','ORB','DRB','TOV','STL','PF','FT','Blk','BA','3PA','3P','2PA','2P']:\n",
+    "    if col in Xbpm:\n",
+    "        Xbpm[col] = 48*Xbpm[col] * time_weight"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf_bpm.fit(Xbpm,Ybpm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf_bpm.intercept_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf_bpm.score(Xbpm,Ybpm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Ybpm_pred = clf_bpm.predict(Xbpm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(Ybpm,Ybpm_pred,s=3,alpha=0.5)\n",
+    "plt.figure()\n",
+    "plt.scatter(df['Ovr'],Ybpm_pred,s=3,alpha=0.5)\n",
+    "plt.figure()\n",
+    "plt.scatter(df['Ovr'],Ybpm,s=3,alpha=0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "col_names = Xbpm.columns\n",
+    "#col_names = fexp.get_feature_names(X.columns)\n",
+    "\n",
+    "coeffs = clf_bpm.coef_ \n",
+    "v = np.argsort(abs(coeffs))[::-1]\n",
+    "print(c)\n",
+    "coeffs2 = [(coeffs[i2],col_names[i2]) for i2 in v]\n",
+    "#for v,n in sorted(coeffs2,reverse=True):\n",
+    "#    print('{:.2f} * {} + '.format(v,n),end='')\n",
+    "print('| Var      | Coeff |')\n",
+    "print('|----------|-------|')\n",
+    "for v,n in sorted(coeffs2,reverse=True):\n",
+    "    if abs(v)< 0.2:\n",
+    "        print(\" '{}',\".format(n),end='')\n",
+    "    print('{}, {:.2f}'.format(n,v))\n",
+    "    #print('|{:10s}|{:.2f}|'.format(n,100*v/coeffs.sum()))\n",
+    "\n",
+    "#for v,n in sorted(coeffs2,reverse=True):\n",
+    "#    print('\\t{:25s}\\t{:.2f}'.format(n,v))\n",
+    "print('{}, {:.2f}'.format('Intercept',clf_bpm.intercept_))\n",
+    "print(Xbpm.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Ybpm_pred'] = Ybpm_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[['Ovr','+/-','Ybpm_pred','PER','EWA','WS/48','+/-_min','DRE']].corr()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import statsmodels.api as sm\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spector_data = Xbpm\n",
+    "spector_data = sm.add_constant(spector_data, prepend=False)\n",
+    "\n",
+    "# Fit and summarize OLS model\n",
+    "mod = sm.OLS(Ybpm,spector_data)\n",
+    "\n",
+    "res = mod.fit()\n",
+    "\n",
+    "res.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Ybm_pres2 = res.predict(spector_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Ybm_pres2'] = Ybm_pres2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[['Ovr','+/-','Ybpm_pred','Ybm_pres2','PER','EWA','WS/48','+/-_min','DRE','GmBPM2']].corr()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(df['Ovr'],Ybm_pres2,s=3,alpha=0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(df['Ovr'],df['DRE'],s=3,alpha=0.5)\n",
+    "plt.figure()\n",
+    "plt.scatter(df['Ovr'],df['GmBPM2'],s=3,alpha=0.5)\n",
+    "plt.figure()\n",
+    "plt.scatter(df['Ybpm_pred'],df['DRE'],s=3,alpha=0.5)\n",
+    "plt.figure()\n",
+    "plt.scatter(df['Ybm_pres2'],df['DRE'],s=3,alpha=0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(Ybpm_pred,Ybm_pres2,s=3,alpha=0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Xbpm.corr().style.background_gradient()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "groups = df.groupby(['pid','Season'],as_index=False).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[(df.pid == 0) & (df.Age > 30)][['Ovr','G','MP','Age','+/-_min','Ybpm_pred','Ybm_pres2','EWA','PER','WS/48',\"DRE\",'GmBPM2']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.options.display.float_format = '{:,.2f}'.format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[(df.pid == 11329) & (df.Age > 24)  & (df.Age < 90) ][['Ovr','Age','+/-_min','Ybpm_pred','Ybm_pres2','EWA','PER','WS/48','DRE','GmBPM2']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df3 = df.groupby(['pid']).std()\n",
+    "df3[(df3.Ovr > 10) & ( df3.Season > 5)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = groups._get_numeric_data().diff()\n",
+    "\n",
+    "df3 = abs(df2[df2.pid == 0])\n",
+    "df3[ ['Ovr','Age','+/-_min','Ybpm_pred','Ybm_pres2','EWA','PER','DRE','GmBPM2']].mean()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "groups"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.groupby('pid').std().mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(df.pid.unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[df.Ovr >=90].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
