--- a/merge_roster.ipynb
+++ b/merge_roster.ipynb
@@ -30,7 +30,7 @@
     "    base = json.load(fp)\n",
     "with open(settings_roster) as fp:\n",
     "    settings = json.load(fp)\n",
-    "base['version']  = 33\n"
+    "#base['version']  = 34\n"
    ]
   },
   {
