--- a/regress_ratings.ipynb
+++ b/regress_ratings.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('big_stat.csv')#pd.read_csv('BBGM_League_7_all_seasons_Average_Stats.csv')\n",
+    "df = pd.read_csv('beta_stats.csv')#big_stat\n",
     "df = df[(df.G*df.MP > 100)]\n",
     "df.shape\n",
     "#df = df.sample(10000)"
@@ -263,6 +263,24 @@
     "    yt = scalery.inverse_transform(clf.predict(prescale_X))\n",
     "    err = np.linalg.norm(yt-y)\n",
     "    ts.append((err,clf))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.decomposition import PCA\n",
+    "td = df[df.Age==22]\n",
+    "td = td.iloc[:,-14:]\n",
+    "tdcol = td.columns\n",
+    "td = preprocessing.StandardScaler().fit_transform(np.array(td))\n",
+    "pca = PCA(3,whiten=True).fit(td)\n",
+    "print(pca.explained_variance_ratio_)\n",
+    "vec = pca.components_\n",
+    "v = pca.transform(td)\n",
+    "plt.scatter(v[:,0],v[:,2])"
    ]
   },
   {
@@ -820,7 +838,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c"
+    "plt.plot(np.linspace(0,250),np.tanh(np.linspace(0,250) * (256/3028)))"
    ]
   },
   {
