--- a/regress_WAR.ipynb
+++ b/regress_WAR.ipynb
@@ -1,6 +1,51 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Previous\n",
+    "| Var      | Coeff |\n",
+    "|----------|-------|\n",
+    "|Hgt       |18.43|\n",
+    "|Spd       |17.48|\n",
+    "|dIQ       |11.92|\n",
+    "|oIQ       |9.27|\n",
+    "|Str       |8.05|\n",
+    "|Jmp       |7.17|\n",
+    "|3Pt       |6.58|\n",
+    "|Pss       |6.38|\n",
+    "|Drb       |5.94|\n",
+    "|End       |3.40|\n",
+    "|Dnk       |3.35|\n",
+    "|Reb       |0.88|\n",
+    "|FT.1      |0.60|\n",
+    "|Ins       |0.55|\n",
+    "|2Pt       |0.00|\n",
+    "\n",
+    "\n",
+    "Beta\n",
+    "| Var      | Coeff |\n",
+    "|----------|-------|\n",
+    "|Hgt       |19.88|\n",
+    "|Spd       |18.53|\n",
+    "|Jmp       |9.44|\n",
+    "|dIQ       |9.32|\n",
+    "|Str       |7.91|\n",
+    "|Drb       |7.63|\n",
+    "|oIQ       |6.64|\n",
+    "|3Pt       |6.61|\n",
+    "|Pss       |5.86|\n",
+    "|Ins       |2.22|\n",
+    "|Reb       |2.19|\n",
+    "|Dnk       |2.05|\n",
+    "|End       |1.70|\n",
+    "|FT.1      |0.00|\n",
+    "|2Pt       |0.00|\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -24,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('big_stat.csv')#pd.read_csv('BBGM_League_7_all_seasons_Average_Stats.csv')\n",
+    "df = pd.read_csv('beta_stats.csv')#big_stat\n",
     "df = df[(df.G*df.MP > 82)]\n",
     "time_weight = (1/np.array(df['MP']))\n",
     "#df['DRE'] = (df['PTS'] + .2*df['TRB'] + 1.7*df['STL'] + .535*df['Blk'] + .5*df['AST'] - .9*df['FGA'] -.35*df['FTA'] - 1.4*df['TOV'])*time_weight*36\n",
@@ -41,6 +86,25 @@
    "outputs": [],
    "source": [
     "V = df[['Name','Ovr']].groupby('Name').max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df = pd.read_csv('avg_stats.csv')\n",
+    "#groups = df.groupby(['pid','Season']).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(df.columns).index('WS')"
    ]
   },
   {
@@ -186,7 +250,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = df['+/-'] * time_weight * 36#45\n",
+    "nf = lambda x: (x-x.mean())/x.std()\n",
+    "y = np.sqrt(df['PER'] * np.maximum(1e-3,df['WS/48']))#df['+/-'] * time_weight * 36#45\n",
+    "y =  nf(df['WS/48'])\n",
+    "y = np.nan_to_num(y)\n",
+    "\n",
+    "#y = df['+/-'] * time_weight * 36#45\n",
     "#y.iloc[:,0] += (df.iloc[:,45]-0.074737)*50 #45\n",
     "#y /=2 \n",
     "\n",
@@ -201,7 +270,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_ = plt.hist(y,20)"
+    "_ = plt.hist(y,50)"
    ]
   },
   {
@@ -255,7 +324,7 @@
     "    #clf = neural_network.MLPRegressor((36,5,24,36),'tanh',solver='adam',max_iter=1000)\n",
     "    #clf = neural_network.MLPRegressor((32,4),'identity',solver='lbfgs',alpha=5e2,tol=1e-9)\n",
     "    #clf = multioutput.MultiOutputRegressor(linear_model.SGDRegressor(penalty='l2',alpha=5e2,eta0=1e-6,tol=1e-12,max_iter=50,verbose=True))\n",
-    "    clf = multioutput.MultiOutputRegressor(linear_model.ElasticNetCV(cv=5,positive=True,fit_intercept=False))\n",
+    "    clf = multioutput.MultiOutputRegressor(linear_model.ElasticNetCV(cv=25,positive=True,fit_intercept=False))\n",
     "    #clf = ensemble.ExtraTreesRegressor(8,criterion='mae',max_depth=3,verbose=1)\n",
     "    #clf = multioutput.MultiOutputRegressor(svm.SVR())\n",
     "    W = df.MP*df.G\n",
@@ -358,16 +427,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res.params"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "coeff = np.array(res.params)#clf.estimators_[i].coef_ \n",
+    "coeff = clf.estimators_[i].coef_ \n",
     "coeff = np.round(coeff,2)\n",
     "coeff[np.where(coeff <= 0)] = 0.01\n",
     "\n",
@@ -898,6 +958,20 @@
    "source": [
     "df[df.Ovr >=90].shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
