--- a/merge_roster.ipynb
+++ b/merge_roster.ipynb
@@ -17,7 +17,7 @@
    "outputs": [],
    "source": [
     "base_roster = 'normed_new.json'\n",
-    "settings_roster = 'auto_roster_2019.json'\n"
+    "settings_roster = 'auto_roster_2020.json'\n"
    ]
   },
   {
@@ -30,7 +30,7 @@
     "    base = json.load(fp)\n",
     "with open(settings_roster) as fp:\n",
     "    settings = json.load(fp)\n",
-    "#base['version']  = 34\n"
+    "base['version']  = 36\n"
    ]
   },
   {
@@ -84,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('updated_roster.json','wt') as fp:\n",
+    "with open('updated_roster20.json','wt') as fp:\n",
     "    json.dump(base,fp)"
    ]
   },
