--- a/correct_base.ipynb
+++ b/correct_base.ipynb
@@ -50,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "players,base = load_roster('2019-20.NBA.Roster.json')\n",
+    "players,base = load_roster('alexnoob.json')\n",
     "base['startingSeason'] = 2020\n",
     "abbrev_to_tid = {_['abbrev']:_['tid']for _ in base['teams']}\n",
     "abbrev_to_tid['PHO'] = abbrev_to_tid['PHX']\n",
@@ -325,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
