--- a/regress_ratings.ipynb
+++ b/regress_ratings.ipynb
@@ -363,7 +363,7 @@
     "    tyear.append(GEN_YEAR-1)\n",
     "all_tables = {}\n",
     "for ty in tyear: \n",
-    "    all_tables[ty] = np.load('tables_{}.pkl'.format(ty))\n",
+    "    all_tables[ty] = np.load('tables_{}.pkl'.format(ty),allow_pickle=True)\n",
     "teams = all_tables[tyear[0]].keys()\n"
    ]
   },
@@ -1125,7 +1125,7 @@
     "    #base['version'] = 34\n",
     "\n",
     "    return players,base\n",
-    "playersOG,base = load_roster('normed.json')\n",
+    "playersOG,base = load_roster('normed_new.json')\n",
     "abbrev_to_tid = {_['abbrev']:_['tid'] for _ in base['teams']}\n",
     "abbrev_to_tid['PHO'] = abbrev_to_tid['PHX']\n",
     "abbrev_to_tid['CHO'] = abbrev_to_tid['CHA']\n",
@@ -1587,7 +1587,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
