--- a/dm_team_rating.ipynb
+++ b/dm_team_rating.ipynb
@@ -96,22 +96,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataX"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "\n",
     "dataset = pd.DataFrame(cols)\n",
+    "fit_cols = ['ovr0', 'ovr1', 'ovr2', 'ovr3', 'ovr4', 'ovr5', 'ovr6', 'ovr7', 'ovr8', 'ovr9']\n",
     "\n",
     "dataX = dataset[fit_cols]\n",
+    "#print(dataX.mean(0))\n",
+    "#print(dataX.std(0))\n",
+    "plt.plot(dataX.mean(0))\n",
+    "plt.fill_between(np.arange(10),dataX.mean(0)+2*dataX.std(0),dataX.mean(0)-2*dataX.std(0),alpha=0.5)\n",
+    "#dataX = (dataX-dataX.mean(0))/dataX.std(0)\n",
     "#dataX = np.tile(np.arange(dataset[fit_cols].shape[1]),(dataset.shape[0],1))\n",
     "\n",
-    "fit_cols = ['ovr0', 'ovr1', 'ovr2', 'ovr3', 'ovr4', 'ovr5', 'ovr6', 'ovr7', 'ovr8', 'ovr9']\n",
     "reg = sm.OLS(dataset['mov'],sm.add_constant(dataX))\n",
     "res = reg.fit()\n",
     "\n",
@@ -191,11 +187,11 @@
    "outputs": [],
    "source": [
     "def best_fit_func_exp(x):\n",
-    "    return np.linalg.norm(dataX @ np.exp(x[0]*np.arange(10))*x[1]-x[2] - dataset['mov'])\n",
+    "    return np.linalg.norm((dataX @ np.exp(x[0]*np.arange(10))*x[1]-x[2] - dataset['mov']))\n",
     "def best_fit_func_lin(x):\n",
-    "    return np.linalg.norm(dataX @ (np.arange(10))*x[0]-x[1] - dataset['mov'])\n",
+    "    return np.linalg.norm(dataX @ (np.arange(10)*x[0]+x[1])-x[2] - dataset['mov'])\n",
     "def best_fit_func_quad(x):\n",
-    "    return np.linalg.norm(dataX @ ((np.arange(10)**2)*x[0] + np.arange(10) * x[1] + x[2]) - dataset['mov'])\n",
+    "    return np.linalg.norm(dataX @ ((np.arange(10)**2)*x[0] + np.arange(10)*x[1] + x[2]) + x[3] - dataset['mov'])\n",
     "best_fit_func_exp([a,np.exp(b),-res.params['const']])"
    ]
   },
@@ -205,7 +201,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res2 = opt.minimize(best_fit_func_exp,[1,1,-100])\n",
+    "res3 = opt.minimize(best_fit_func_lin,[-0.1,1,100])\n",
+    "res3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qinit = np.polyfit(np.arange(10),np.array(res.params[1:]),2)\n",
+    "best_fit_func_quad(list(qinit) + [-125])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res4 = opt.minimize(best_fit_func_quad,list(qinit) + [-125])\n",
+    "res4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res2 = opt.minimize(best_fit_func_exp,[a,np.exp(b),-125],method='Nelder-Mead')\n",
     "res2"
    ]
   },
@@ -215,9 +241,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(np.array(res.params[1:]))\n",
-    "plt.plot(np.exp(np.arange(10)*a)*np.exp(b))\n",
-    "plt.plot(np.exp(res2.x[0]*np.arange(10))*res2.x[1])"
+    "plt.style.use('fivethirtyeight')\n",
+    "#plt.plot(np.exp(np.arange(10)*a)*np.exp(b),label='exp trendline to OLS',alpha=0.8)\n",
+    "plt.plot(np.exp(res2.x[0]*np.arange(10))*res2.x[1],label='best-fit exp model',alpha=0.6)\n",
+    "plt.plot((res3.x[0]*np.arange(10)+res3.x[1]),label='best-fit lin model',alpha=0.6)\n",
+    "plt.plot((res4.x[0]*(np.arange(10)**2)+np.arange(10)*res4.x[1] +res4.x[2]),label='best-fit quad model',alpha=0.6)\n",
+    "\n",
+    "plt.plot(np.array(res.params[1:]),label='OLS',c='k')\n",
+    "\n",
+    "plt.legend()\n",
+    "plt.gca().set_facecolor('w')\n",
+    "#plt.gca().set_edgecolor('w')\n",
+    "plt.tight_layout()"
    ]
   },
   {
@@ -227,7 +262,30 @@
    "outputs": [],
    "source": [
     "from IPython.display import display, Math\n",
-    "display(Math('{:.2f} e^{{ {:.2f} x }}  + {:.2f}'.format(res2.x[1],res2.x[0],res2.x[2])))"
+    "display(Math('{:.4f} e^{{ {:.4f} x }}  + {:.2f}'.format(res2.x[1],res2.x[0],res2.x[2])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred_mov = dataX @ np.exp(res2.x[0]*np.arange(10))*res2.x[1]-res2.x[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(dataset['mov'],pred_mov,s=2,alpha=0.2)\n",
+    "plt.xlabel('actual mov')\n",
+    "plt.ylabel('predicted mov')\n",
+    "print('exp r2: ', r2_score(dataset['mov'], pred_mov))\n",
+    "print('OLS r2: ', r2_score(dataset['mov'], dataset['mov_predicted']))\n",
+    "plt.plot([-20,20],[-20,20])"
    ]
   },
   {
