--- a/natural pos.ipynb
+++ b/natural pos.ipynb
@@ -86,8 +86,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import umap\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "pca_fit = decomposition.PCA()\n",
     "res = pca_fit.fit_transform(t)\n",
+    "res = umap.UMAP().fit_transform(t)\n",
     "#res = manifold.TSNE(perplexity=15).fit_transform(t)\n",
     "print(pca_fit.components_[:2])"
    ]
@@ -150,10 +160,11 @@
     "    plt.scatter(res[np.where(cluster_labels==i),0],res[np.where(cluster_labels==i),1],s=4)\n",
     "    for i,name in enumerate(pva.keys()):\n",
     "        if np.array(vorps[name]).mean() > 2:\n",
+    "            print(name,res[i])\n",
     "            plt.text(res[i,0],res[i,1],name.split()[1],ha='center',va='center',size=8)\n",
-    "plt.xticks([],[])\n",
-    "plt.yticks([],[])\n",
-    "plt.title('NBA Positions based on per-possession statistics (via PCA)')\n",
+    "#plt.xticks([],[])\n",
+    "#plt.yticks([],[])\n",
+    "plt.title('NBA Positions based on per-possession statistics (via UMAP)')\n",
     "plt.tight_layout()\n",
     "plt.savefig('pos3.png',facecolor='w',edgecolor='w')"
    ]
@@ -172,7 +183,7 @@
     "plt.legend(scatterpoints=4,markerscale=3)\n",
     "plt.xticks([],[])\n",
     "plt.yticks([],[])\n",
-    "plt.title('NBA Positions based on per-possession statistics (via PCA)')\n",
+    "plt.title('NBA Positions based on per-possession statistics (via UMAP)')\n",
     "plt.tight_layout()\n",
     "plt.savefig('pos2.png',facecolor='w',edgecolor='w')"
    ]
